--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,10 +15,27 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<main>
 			<h1>🧑‍🚀 Hello, ADDEDVALUE!</h1>
 			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
+				Bienvenidos a Added Valude Technology Tecnología con Valor Añadido ofertado por SAI ELCHE, Pensada para Impulsar tu Futuro
+				En un mundo cada vez más digital, no basta con estar a la vanguardia: hay que generar impacto real. 
+				Transformamos la tecnología en soluciones estratégicas que impulsan tu crecimiento, optimizan tus procesos y te colocan un paso adelante de la competencia.
 			</p>
+
+			<h3 data-start="639" data-end="671" class="">🚀 ¿Qué nos hace diferentes?</h3>
+
+			<ul data-start="673" data-end="1101">
+			<li data-start="673" data-end="812" class="" style="">
+			<p data-start="675" data-end="812" class=""><strong data-start="675" data-end="718">Innovación que se traduce en resultados</strong>
+				Aplicamos tecnologías emergentes con un enfoque práctico y orientado a objetivos concretos.</p>
+			</li>
+			<li data-start="814" data-end="932" class="" style="">
+			<p data-start="816" data-end="932" class=""><strong data-start="816" data-end="845">Soluciones personalizadas</strong>
+				Diseñamos e implementamos herramientas a medida, adaptadas a tus necesidades reales.</p>
+			</li>
+			<li data-start="934" data-end="1101" class="" style="">
+			<p data-start="936" data-end="1101" class=""><strong data-start="936" data-end="963">Acompañamiento continuo</strong>
+				No solo entregamos tecnología: te acompañamos en cada etapa del camino, asegurando el máximo aprovechamiento de tus recursos digitales.</p>
+			</li>
+			</ul>
 			<p>
 				This template comes with a few integrations already configured in your
 				<code>astro.config.mjs</code> file. You can customize your setup with
