--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,12 +14,15 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<Header />
 		<main>
 			<h1>🧑‍🚀 Hello, ADDEDVALUE!</h1>
-			<p>
+
+			<p data-start="1346" data-end="1525" class="">
 				Bienvenidos a Added Valude Technology Tecnología con Valor Añadido ofertado por SAI ELCHE, Pensada para Impulsar tu Futuro
 				En un mundo cada vez más digital, no basta con estar a la vanguardia: hay que generar impacto real. 
 				Transformamos la tecnología en soluciones estratégicas que impulsan tu crecimiento, optimizan tus procesos y te colocan un paso adelante de la competencia.
-			</p>
 
+
+			</p>
+		
 			<h3 data-start="639" data-end="671" class="">🚀 ¿Qué nos hace diferentes?</h3>
 
 			<ul data-start="673" data-end="1101">
@@ -36,31 +39,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				No solo entregamos tecnología: te acompañamos en cada etapa del camino, asegurando el máximo aprovechamiento de tus recursos digitales.</p>
 			</li>
 			</ul>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
+			<p></p>
+			<h3 data-start="1313" data-end="1344" class="">🌐 Tecnología con propósito</h3>
+
+			<p data-start="1346" data-end="1525" class="">
+				Nuestro compromiso es contigo y con tu visión. Te ayudamos a tomar decisiones tecnológicas que generen <strong data-start="1449" data-end="1467">valor tangible</strong>, 
+				mejorando tu productividad, eficiencia y competitividad.
 			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
+
 		</main>
 		<Footer />
 	</body>
